--- a/src/VN-master-detail/VN-master-detail/VN-master-detail.csproj
+++ b/src/VN-master-detail/VN-master-detail/VN-master-detail.csproj
@@ -66,7 +66,9 @@
 	  <ProjectReference Include="..\DataManagers\DataManagers.csproj" />
 	  <ProjectReference Include="..\Interfaces\Interfaces.csproj" />
 	  <ProjectReference Include="..\Model\Model.csproj" />
+	  <ProjectReference Include="..\NullInterfaces\NullInterfaces.csproj" />
 	  <ProjectReference Include="..\Stub\Stub.csproj" />
+	  <ProjectReference Include="..\ViewModel\ViewModel.csproj" />
 	</ItemGroup>
 
 	<ItemGroup>
