--- a/src/VN-master-detail/ViewModel/ViewModel.csproj
+++ b/src/VN-master-detail/ViewModel/ViewModel.csproj
@@ -13,6 +13,7 @@
   <ItemGroup>
     <ProjectReference Include="..\Interfaces\Interfaces.csproj" />
     <ProjectReference Include="..\Model\Model.csproj" />
+    <ProjectReference Include="..\NullInterfaces\NullInterfaces.csproj" />
   </ItemGroup>
 
 </Project>
