--- a/src/VN-master-detail/VN-master-detail/VN-master-detail.csproj
+++ b/src/VN-master-detail/VN-master-detail/VN-master-detail.csproj
@@ -101,6 +101,9 @@
 	  <MauiXaml Update="NovelDetail.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
+	  <MauiXaml Update="Profile.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
 	  <MauiXaml Update="Search.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
