--- a/src/VN-master-detail/Stub/Stub.csproj
+++ b/src/VN-master-detail/Stub/Stub.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\DTO.Extensions\DTO.Extensions.csproj" />
     <ProjectReference Include="..\Interfaces\Interfaces.csproj" />
     <ProjectReference Include="..\Utils\Utils.csproj" />
   </ItemGroup>
