[ADD] Add novel to user list

--- a/src/VN-master-detail/VN-master-detail/VN-master-detail.csproj
+++ b/src/VN-master-detail/VN-master-detail/VN-master-detail.csproj
@@ -64,6 +64,7 @@
 	</ItemGroup>
 
 	<ItemGroup>
+	  <ProjectReference Include="..\APIRequestor\APIRequestor.csproj" />
 	  <ProjectReference Include="..\DataManagers\DataManagers.csproj" />
 	  <ProjectReference Include="..\Interfaces\Interfaces.csproj" />
 	  <ProjectReference Include="..\Model\Model.csproj" />
