--- a/src/VN-master-detail/VN-master-detail/VN-master-detail.csproj
+++ b/src/VN-master-detail/VN-master-detail/VN-master-detail.csproj
@@ -105,6 +105,12 @@
 	  <MauiXaml Update="Profile.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
+	  <MauiXaml Update="Resources\Themes\DarkTheme.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
+	  <MauiXaml Update="Resources\Themes\LightTheme.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
 	  <MauiXaml Update="Search.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
